--- a/colorpicker/cblcolorpicker.kv
+++ b/colorpicker/cblcolorpicker.kv
@@ -138,7 +138,7 @@
             CBLColorWheel:
                 id: wheel
                 size_hint: (1, 1)
-                origin: (self.center_x, self.center_y)
+                #origin: (self.center_x, self.center_y)
                 radius: 0.45*min(self.size)
                 on_rgba: root.rgba_callback(self.rgba)
 
